--- a/src/nunjucks/templates/layout.njk
+++ b/src/nunjucks/templates/layout.njk
@@ -4,11 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>{{projectName}}</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     {% block content %} {% endblock %}
     <script src="js/vendor/toggles-switches.js"></script>
+    <script src="js/vendor/svg4everybody.js"></script>
+    <script>svg4everybody();</script>
     <script src="js/main.js"></script>
 </body>
 </html>
