Replaced nunjucks with twig

--- a/src/twig/pages/index.twig
+++ b/src/twig/pages/index.twig
@@ -1,9 +1,7 @@
-{% from "icon.njk" import icon %}
-{% extends "layout.njk" %}
+{% from "/templates/macros/icon.twig" import icon %}
+{% extends "/templates/layout.twig" %}
 
 {% block content %}
     <h1>{{projectName}}</h1>
-
     {{ icon({name: 'triangle', extraClasses: ''}) }}
-
 {% endblock %}
