Upgraded to twing and gulp 4

--- a/src/twig/pages/index.twig
+++ b/src/twig/pages/index.twig
@@ -1,5 +1,5 @@
-{% from "/templates/macros/icon.twig" import icon %}
-{% extends "/templates/layout.twig" %}
+{% from "@components/icon.twig" import icon %}
+{% extends "@layouts/layout.twig" %}
 
 {% block content %}
     <h1>{{projectName}}</h1>
