Fixed a couple of things

--- a/src/scss/generic/_base.scss
+++ b/src/scss/generic/_base.scss
@@ -12,4 +12,8 @@ html {
 body {
     font-family: 'Helvetica Neue', helvetica, arial, sans-serif;
     min-height: 100%;
+
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    text-rendering: optimizeLegibility;
 }
