--- a/src/twig/pages/index.twig
+++ b/src/twig/pages/index.twig
@@ -1,7 +1,16 @@
-{% from "@components/icon.twig" import icon %}
 {% extends "@layouts/layout.twig" %}
+{% from "@components/icon.twig" import icon %}
 
 {% block content %}
     <h1>{{projectName}}</h1>
     {{ icon({name: 'triangle', extraClasses: ''}) }}
+
+    {% for section in data.sections %}
+
+        {% include '@includes/' ~ section.component ~ '.twig' with {
+            props: section
+        } %}
+
+    {% endfor %}
+
 {% endblock %}
